# manvzombie

./: .gitignore  CMakeLists.txt  README.md  compile.sh  envWindowsExample.cmake  keyboard_movement_controller.cpp  main.cpp  main_app.cpp  main_app.hpp  mvz_camera.hpp  mvz_descriptors.cpp  mvz_descriptors.hpp  mvz_device.cpp  mvz_frame_info.hpp  mvz_game_object.hpp  mvz_model.cpp  mvz_model.hpp  mvz_renderer.hpp  mvz_swap_chain.cpp  mvz_swap_chain.hpp  mvz_window.cpp  mvz_window.hpp  simple_render_system.cpp  simple_render_system.hpp
shaders/: point_light.frag  point_light.vert  simple_shader.frag  simple_shader.vert
src/: keyboard_movement_controller.hpp  main_app.cpp  mvz_buffer.cpp  mvz_buffer.hpp  mvz_camera.cpp  mvz_camera.hpp  mvz_device.hpp  mvz_frame_info.hpp  mvz_game_object.cpp  mvz_game_object.hpp  mvz_model.cpp  mvz_model.hpp  mvz_pipeline.cpp  mvz_pipeline.hpp  mvz_renderer.cpp  mvz_renderer.hpp  mvz_utils.hpp  mvz_window.hpp  simple_render_system.hpp
src/systems/point_light_system/: point_light_system.cpp  point_light_system.hpp
src/systems/simple_render_system/: simple_render_system.cpp
